<resources>
    <string name="app_name">Sub3GitUser</string>
    <string name="_repository">%1$s Repository</string>
    <string name="_followers">%1$s Followers</string>
    <string name="_following">%1$s Following</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="hint_username">username</string>
    <string name="company_null">-</string>
    <string name="location_null">-</string>
    <string name="cd_profile_picture">Profile Picture</string>
    <string name="option_menu_favorite">Favorite</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>